# GitRag

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LineMapper.py  README.md  action.yml  pyproject.toml  readme.md  requirements.txt
.agent-os/instructions/core/: execute-task.md
.agent-os/product/: implementation-plan.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/product/specs/: fts-hybrid-retrieval.md
.agent-os/product/tasks/: libsql-migration.md
.agent-os/specs/2025-10-06-libsql-persistence-migration/: spec-lite.md  spec.md  tasks.md
.agent-os/standards/: best-practices.md  code-review-checklist.md  code-style.md  tech-stack.md
.github/workflows/: GitRag.yml  index.yml  reusable.yml  sync-branches.yml
.serena/: project.yml
docs/: mission.md
docs/superpowers/specs/: 2026-03-10-indexer-timeout-prevention-design.md  2026-03-26-chunking-correctness-design.md
provisioning/: README.md
provisioning/d1/: schema.sql
provisioning/libsql/: schema.sql
provisioning/postgres/: schema.sql
provisioning/vectorize/: create-index.json  metadata-indexes.jsonl
src/: Chunk.py  Extractor.py  Indexer.py  LineMapper.py  Persist.py  PersistPostgres.py  chunker.py  grammar_queries.json
src/Calculators/: CodeRankCalculator.py
tests/: __init__.py  fixtures.py  test_chunker_documents.py  test_chunker_helpers.py  test_chunker_languages.py  test_indexer_cli.py  test_libsql_persist.py  test_persist.py
tests/fixtures/: crlf.txt  huge_random.txt  random_noncode.pro
(+2 files in other folders)
